# llm_pipelines_demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile-kfp  LICENSE  README.md  cloudbuild-vertex.yml  docker-compose-kfp-local.yml  main_remote.py  pyproject.toml
.github/workflows/: cicd.yaml
pipelines/: config.cfg  demo.py  utils.py
scripts/: cli.py  helpers.py
tests/: test_utils.py
