[project]
name = "pipelines"
version = "1.0.0"
requires-python = "~=3.12"
description = "Demo of local and remote pipelines for calling and evaluating LLMs using Kubeflow and Vertex AI."
authors = [{name = "Gleb Lukicov"}]
readme = "README.md"

dependencies = [
    "docker>=7.1.0",
    "google-cloud-aiplatform>=1.72.0",
    "kfp>=2.10.1",
    "typer>=0.13.1",
]

[dependency-groups]
dev = [
    "google-cloud-aiplatform[metadata]>=1.73.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.7.4",
]

[tool.uv]
package = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kfp.*"
ignore_missing_imports = true

[project.scripts]
build-local = "scripts.cli:build_container_local"
build-remote = "scripts.cli:build_container_remote"
run-local = "scripts.cli:run_pipeline_local"
run-remote = "scripts.cli:run_pipeline_remote"
fetch-metrics = "scripts.cli:fetch_metrics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
